# aura

./: .gitignore  CLAUDE.md  TODO.md  package.json  pnpm-lock.yaml  skills-lock.json
apps/web/: index.html  package.json  tsconfig.tsbuildinfo
apps/web/src/: App.tsx  index.css  router.tsx
apps/web/src/contexts/: ChatContext.tsx  WebSocketContext.tsx
apps/web/src/features/chat/: AgentStatus.tsx  ApprovalCard.tsx  ChatPage.tsx  Composer.tsx  FileChangeNotice.tsx  MessageBubble.tsx  MessageList.tsx  ProjectSelector.tsx  StreamingMessage.tsx  ThreadSidebar.tsx  TurnItemCard.tsx
apps/web/src/hooks/: use-agent.ts  use-chat.ts  use-file-events.ts  use-websocket.ts
apps/web/src/layouts/: AppLayout.tsx
apps/web/src/lib/: api.ts
apps/web/src/types/: agent.ts  chat.ts  project.ts  websocket.ts
docs/: ARCHITECTURE.md
docs/todo/: _TEMPLATE.md  godot-knowledge-base.md  viewport-capture.md
engines/godot-test/: aura_bridge.gd  aura_bridge.gd.uid  node_3d.tscn  project.godot
services/backend/: pyproject.toml  seed_project.py
services/backend/src/aura_backend/: __init__.py  config.py  main.py
services/backend/src/aura_backend/agent/: base.py  context.py  file_ops.py  models.py  service.py
services/backend/src/aura_backend/agent/codex/: adapter.py  protocol.py
services/backend/src/aura_backend/api/: chat.py  health.py  projects.py
services/backend/src/aura_backend/chat/: models.py  service.py
services/backend/src/aura_backend/db/: schema.py
services/backend/src/aura_backend/websocket/: manager.py  router.py  schemas.py
(+5 files in other folders)
